--- a/src/pages/cliente/index.scss
+++ b/src/pages/cliente/index.scss
@@ -3,7 +3,7 @@
   font-family: Arial, sans-serif;
   overflow: hidden;
 
-  .lista-container {
+  .list-container {
     width: 300px;
     background-color: #e0e0e0;
     padding: 20px;
@@ -11,13 +11,13 @@
     overflow-y: auto;
   }
 
-  .formulario {
+  .form {
     flex: 1;
     padding: 30px;
     background-color: #f1f1f1;
     overflow-y: auto;
 
-    .bloco {
+    .block {
       background-color: #cfcfcf;
       padding: 20px;
       margin-bottom: 20px;
@@ -47,18 +47,17 @@
       border-radius: 3px;
       background-color: white;
     }
+  }
+  .btn {
+    padding: 10px 20px;
+    background-color: #00ad25;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 
-    .btn-salvar {
-      padding: 10px 20px;
+    &:hover {
       background-color: #00ad25;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-
-      &:hover {
-        background-color: #00ad25;
-      }
     }
   }
 }
