--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -1,12 +1,12 @@
 .btn {
     padding: 10px 20px;
-    background-color: #00ad25;
+    background-color: #0900ad;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 
     &:hover {
-      background-color: #00ad25;
+      background-color: #100053e7;
     }
   }
