--- a/src/pages/cliente/index.scss
+++ b/src/pages/cliente/index.scss
@@ -21,14 +21,15 @@
       background-color: #cfcfcf;
       padding: 20px;
       margin-bottom: 20px;
-      border-radius: 4px;
+      border-radius: 10px;
 
       h3 {
-        background-color: #a0a0a0;
+        background-color: #000080;
         color: white;
         padding: 8px 12px;
         margin: -20px -20px 20px -20px;
         font-size: 16px;
+        border-radius:10px 10px 0 0;
       }
     }
   }
