--- a/src/pages/contract/contract.scss
+++ b/src/pages/contract/contract.scss
@@ -2,4 +2,19 @@
     display: flex;
     font-family: Arial, sans-serif;
     overflow: hidden;
+
+    .list-container {
+        width: 300px;
+        background-color: #e0e0e0;
+        padding: 20px;
+        border-right: 1px solid #999;
+        overflow-y: auto;
+    }
+
+    .form {
+        flex: 1;
+        padding: 30px;
+        background-color: #f1f1f1;
+        overflow-y: auto;
+    }
 }
