--- a/src/pages/cliente/listClient.scss
+++ b/src/pages/cliente/listClient.scss
@@ -15,13 +15,13 @@
 
   .top-bar {
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 1px;
     margin-bottom: 10px;
   }
 
   .field-search {
-    flex: 1;
     padding: 4px;
     border-radius: 4px;
     border: none;
@@ -31,6 +31,7 @@
     background: none;
     border: none;
     color: white;
+    padding: 10px;
     font-size: 18px;
     cursor: pointer;
   }
