--- a/src/pages/cliente/dataCustomer.scss
+++ b/src/pages/cliente/dataCustomer.scss
@@ -11,7 +11,7 @@
     gap: 20px;
     height: 100%;
 
-    .client-lateral {
+    .client-side {
       width: 150px;
       display: flex;
       flex-direction: column;
@@ -32,14 +32,14 @@
       }
     }
 
-    .client-conteudo {
+    .client-content {
       display: flex;
       flex-direction: column;
       gap: 15px;
       flex: 1;
       height: 100%;
 
-      .abas {
+      .tabs {
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
