--- a/src/pages/cliente/listClient.scss
+++ b/src/pages/cliente/listClient.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 73px;
+  width: 70px;
   background-color: #cfcfcf;
   transition: width 0.3s ease;
   height: 100%;
@@ -17,23 +17,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1px;
-    margin-bottom: 10px;
-  }
+    margin-top: 12px;
+    margin-bottom: 5px;
 
-  .field-search {
-    padding: 4px;
-    border-radius: 4px;
-    border: none;
-  }
+    .search-row {
+      display: flex;
+      align-items: center;
+    }
 
-  .btn-icon{
-    background: none;
-    border: none;
-    color: white;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
+    .field-search {
+      flex: 1;
+      padding: 10px 10px;
+      border-radius: 10px;
+      border: none;
+    }
+
+    .btn-icon {
+      background: none;
+      border: none;
+      color: #000080;      
+      padding: 10px;
+      font-size: 24px;
+      cursor: pointer;
+    }
   }
 
   .user {
@@ -42,14 +48,28 @@
     padding: 8px 5px;
     gap: 10px;
     cursor: pointer;
+  
+    &:hover {
+      background-color: #e0e0e0;
+    }
+  
+    .icon-user {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #f1f1f1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      margin: 10px 0;
+      flex-shrink: 0;
+    }
+  
+    i.bi-person-fill {
+      font-size: 24px;
+      color: #000080;
+    }
   }
-
-  .icon-user {
-    background-color: white;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin: 10px 0;
-    flex-shrink: 0;
-  }
+  
 }
