--- a/src/pages/cliente/dataCustomer.scss
+++ b/src/pages/cliente/dataCustomer.scss
@@ -1,22 +1,26 @@
 .container {
   display: flex;
   font-family: Arial, sans-serif;
-  width: 100vw;
   height: 100vh;
 
   .client-container {
     flex: 1;
     display: flex;
-    padding: 30px;
+    padding: 15px;
     gap: 20px;
     align-items: flex-start;
     justify-content: space-between;
 
     .client-side {
-      width: 250px;
+      width: 260px;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 2px 8px #0000001a;
+      padding: 24px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 16px;
 
       .photo-user {
         width: 200px;
@@ -29,13 +33,12 @@
         justify-content: center;
         font-size: 130px;
         color: #000080;
-        margin-top: 15px;
-        margin-bottom: 15px;
       }
 
       .client-name {
         font-weight: bold;
         font-size: 20px;
+        color: #000080;
         margin: 5px 0 13px;
       }
     }
@@ -43,7 +46,7 @@
     .client-content {
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 24px;
       flex: 1;
       height: 100%;
 
@@ -54,9 +57,12 @@
       }
 
       .box-info {
-        background: #cfcfcf;
+        background: #fff;
         padding: 20px;
-        flex-grow: 1;
+        border-radius: 16px;
+        box-shadow: 0 2px 8px #0000001a;        display: flex;
+        flex-direction: column;
+        gap: 12px;
       }
 
       .edit {
