--- a/src/pages/turma/index.scss
+++ b/src/pages/turma/index.scss
@@ -8,41 +8,31 @@ body{
     width: 100%;
     min-height: 100vh;
     display: flex;
-    background-color: rgba(0, 0, 0, 0.737);
+    background-color: rgba(0, 0, 0, 0.74);
     align-items: center;
     justify-content: center;
 }
-.header{
-    text-align: center;
-    color: black;
-}
-.form-context{
-    text-align: center;
-}
-.form-context label{
-    
-}
-.container{
-    background-color: rgb(84, 84, 84);
-    border-radius: 20px;
-    margin: 14px;
-    min-width: 600px;
-    width: 100%;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-.container input{
-    width: 100%;
-    height: 70px;
-    margin-bottom: 20px;
-    margin-left: 10px;
+form{
+    color: white;
+    background-color: rgba(0, 0, 0, 0.305);
+    padding: 40px;
     border-radius: 10px;
-    border-color: gold;
 }
-.container select{
-    text-align: center;
-    width: 300px;
-    height: 90px;
-    border-radius: 20px;
-    margin-left: 50%;
+form h1{
+    margin-bottom: 20px;
+
+}
+#time
+{
+    width: 350px;
+}
+
+#turma,
+#vagas,
+#time,
+#observacao,
+#local,
+#cores
+{
+   height: 50px;
 }
