--- a/src/pages/contract/Info/styles.scss
+++ b/src/pages/contract/Info/styles.scss
@@ -11,38 +11,6 @@
     align-items: flex-start;
     justify-content: space-between;
 
-    .contract-side {
-      width: 260px;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: -4px 4px 12px 2px rgba(0, 0, 0, 0.25); 
-      padding: 24px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 16px;
-
-      .photo-contract {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        background: #cfcfcf;
-        object-fit: cover;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 130px;
-        color: #000080;
-      }
-
-      .contract-name {
-        font-weight: bold;
-        font-size: 20px;
-        color: #000080;
-        margin: 5px 0 13px;
-      }
-    }
-
     .contract-content {
       display: flex;
       flex-direction: column;
@@ -50,11 +18,11 @@
       flex: 1;
       height: 100%;
 
-      .tabs {
+      /*.tabs {
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
-      }
+      }*/
 
       .box-info {
         background: #fff;
@@ -64,6 +32,15 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
+
+        .btn-icon {
+          width: auto;
+          min-width: unset;
+          padding: 6px 16px;
+          font-size: 1rem;
+          border-radius: 6px;
+          align-self: flex-start; // opcional, para alinhar à esquerda
+        }
       }
 
       .edit {
