--- a/src/pages/contract/components/styles.scss
+++ b/src/pages/contract/components/styles.scss
@@ -5,6 +5,19 @@
   padding: 2rem 1rem;
 }
 
+.btn-icon {
+  background: #000080;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    padding: 0.5rem 0.7rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background 0.2s;
+    display: flex;
+    align-items: center;
+}
+
 .table-header {
   display: flex;
   align-items: center;
