--- a/src/pages/contract/Info/styles.scss
+++ b/src/pages/contract/Info/styles.scss
@@ -1,58 +1,23 @@
 .container {
   display: flex;
-  font-family: Arial, sans-serif;
-  height: 100vh;
+  flex-direction: column;
+  gap: 16px;
+  font-size: 20px;
+  height: 100%;
 
-  .contract-container {
-    flex: 1;
-    display: flex;
-    padding: 15px;
-    gap: 20px;
-    align-items: flex-start;
-    justify-content: space-between;
-
-    .contract-content {
-      display: flex;
-      flex-direction: column;
-      gap: 24px;
-      flex: 1;
-      height: 100%;
-
-      /*.tabs {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-      }*/
-
-      .box-info {
-        background: #fff;
-        padding: 20px;
-        border-radius: 16px;
-        box-shadow: -4px 4px 12px 2px rgba(0, 0, 0, 0.25); 
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-
-        .btn-icon {
-          width: auto;
-          min-width: unset;
-          padding: 6px 16px;
-          border-radius: 6px;
-          align-self: flex-start; // opcional, para alinhar à esquerda
-          background: #000080;
-          color: #fff;
-          border: none;
-          font-size: 1.2rem;
-          cursor: pointer;
-          transition: background 0.2s;
-          display: flex;
-          align-items: center;
-        }
-      }
-
-      .edit {
-        align-self: flex-end;
-      }
-    }
-  }
+  .btn-icon {
+  width: auto;
+  min-width: unset;
+  padding: 6px 16px;
+  border-radius: 6px;
+  align-self: flex-start;
+  background: #000080;
+  color: #fff;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background 0.2s;
+  display: flex;
+  align-items: center;
+}
 }
