--- a/src/pages/contract/components/styles.scss
+++ b/src/pages/contract/components/styles.scss
@@ -127,12 +127,11 @@
 }
 .modal-content {
   background: #fff;
-  border-radius: 10px;
-  padding: 2rem;
-  min-width: 90vw;
-  max-width: 90vw;
-  min-height: 90vh;
-  max-height: 90vh;
-  overflow-y: auto;
-  box-shadow: 0 4px 24px #0003;
+  padding: 25px 40px 40px 40px;
+  min-width: 60vw;
+  max-width: 60vw;
+  min-height: 85vh;
+  max-height: 85vh;
+  border-radius: 16px;
+  box-shadow: -4px 4px 12px 2px rgba(0, 0, 0, 0.25); 
 }
