--- a/src/pages/contract/Register/styles.scss
+++ b/src/pages/contract/Register/styles.scss
@@ -8,9 +8,9 @@
   padding: 0.3rem;
   border-radius: 4px;
   transition: background 0.2s;
-  margin: 20px 20px 0px 20px;
 
 .container {
+  margin: 20px;
   display: flex;
   font-family: Arial, sans-serif;
   overflow: hidden;
