--- a/src/pages/contract/Register/styles.scss
+++ b/src/pages/contract/Register/styles.scss
@@ -37,5 +37,25 @@
         border-radius:10px 10px 0 0;
       }
     }
+
+    .side {
+      display: flex;
+      gap: 16px; // Espaço entre os elementos
+      width: 100%;
+
+      > * {
+        flex: 1 1 0;
+        min-width: 0;
+      }
+
+      .arrow-time {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5rem;
+        flex: 0 0 auto;
+        padding: 16px 4px 0px 4px;
+      }
+    }
   }
 }
