--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -62,6 +62,8 @@
   border: none;
   border-radius: 10px;
   cursor: pointer;
+  width: fit-content;
+  margin: 5px;
 
   &:hover {
     background-color: #100053e7;
