--- a/src/pages/contract/components/styles.scss
+++ b/src/pages/contract/components/styles.scss
@@ -1,5 +1,5 @@
 .btn-icon-edit {
-    background: #6161ff;
+    background: #ffff00; //#6161ff
     color: #fff;
     border: none;
     border-radius: 6px;
