--- a/src/pages/contract/Register/styles.scss
+++ b/src/pages/contract/Register/styles.scss
@@ -30,7 +30,7 @@
 
       h3 {
         background-color: #000080;
-        color: white;
+        color: #ffffff;
         padding: 8px 12px;
         margin: -20px -20px 20px -20px;
         font-size: 16px;
