--- a/src/pages/client/components/styles.scss
+++ b/src/pages/client/components/styles.scss
@@ -1,6 +1,8 @@
+@use "../../../styles/vars.scss" as vars;
+
 .sidebar {
   width: 70px;
-  background-color: #cfcfcf;
+  background-color: vars.$bg-form;
   transition: width 0.3s ease;
   height: 100%;
   padding: 10px;
@@ -52,7 +54,7 @@
     .btn-icon {
       background: none;
       border: none;
-      color: #000080;
+      color: vars.$btn-bg-icon;
       padding: 10px;
       font-size: 24px;
       cursor: pointer;
@@ -74,7 +76,7 @@
       }
   
       &::-webkit-scrollbar-thumb {
-        background: #000080;
+        background: vars.$btn-primary;
         border-radius: 10px;
       }
   
@@ -92,14 +94,14 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #e0e0e0;
+      background-color: vars.$bg-list;
     }
 
     .icon-user {
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background-color: #f1f1f1;
+      background-color: vars.$user-color;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -110,7 +112,7 @@
 
     i.bi-person-fill {
       font-size: 24px;
-      color: #000080;
+      color: vars.$icon-color;
     }
 
     .username {
