--- a/src/pages/contract/Info/styles.scss
+++ b/src/pages/contract/Info/styles.scss
@@ -1,3 +1,5 @@
+@use "../../../styles/vars.scss" as vars;
+
 .container-contract-info {
   display: flex;
   flex-direction: column;
@@ -11,8 +13,8 @@
   padding: 6px 16px;
   border-radius: 6px;
   align-self: flex-start;
-  background: #000080;
-  color: #fff;
+  background: vars.$btn-bg-icon;
+  color: vars.$text-header;
   border: none;
   font-size: 1rem;
   cursor: pointer;
