--- a/src/pages/turma/index.scss
+++ b/src/pages/turma/index.scss
@@ -1,3 +1,4 @@
+@use "../../styles/vars.scss" as vars;
 // body{
 //     background-color: rgba(128, 128, 128, 0.541);
 // }
@@ -6,16 +7,16 @@
   max-width: 700px;
   margin: 0 auto;
   padding: 2rem;
-  background-color: #ffffff;
+  background-color: vars.$bg-form;
   border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 12px vars.$text;
 }
 
 h1 {
   text-align: center;
   margin-bottom: 2rem;
   font-size: 1.8rem;
-  color: #333;
+  color: vars.$text;
 }
 
 .container-class {
@@ -41,7 +42,7 @@ h1 {
     width: 100%;
     padding: 0.75rem;
     font-size: 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid vars.$border-form;
     border-radius: 6px;
   }
   
@@ -49,15 +50,13 @@ h1 {
     display: block;
     margin-bottom: 0.5rem;
     font-weight: 600;
-    color: #333;
+    color: vars.$text;
   }
   
   button {
     align-self: flex-start;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
-    background-color: #2d7ff9;
-    color: #fff;
     border: none;
     border-radius: 6px;
     cursor: pointer;
