--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -134,24 +134,10 @@
     text-align: center;
     width: 60px;
   }
-
-  // .btn-icon {
-  //   background: none;
-  //   border: none;
-  //   color: #000080;
-  //   font-size: 1.2rem;
-  //   cursor: pointer;
-  //   padding: 0.3rem;
-  //   border-radius: 4px;
-  //   transition: background 0.2s;
-
-  //   &:hover {
-  //     background: #dde6fa;
-  //   }
-  // }
 }
 
-/*.modal-overlay {
+// Colocar no .scss de modal
+.modal-overlay {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   background: rgba(0,0,0,0.4);
@@ -169,4 +155,4 @@
   max-height: 85vh;
   border-radius: 16px;
   box-shadow: -4px 4px 12px 2px rgba(0, 0, 0, 0.25); 
-}*/
+}
