--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -45,7 +45,7 @@
 .table-header {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  // justify-content: flex-end;
   gap: 1rem;
   margin-bottom: 1.5rem;
   align-items: center;
