--- a/src/pages/caixa/Movement/style.scss
+++ b/src/pages/caixa/Movement/style.scss
@@ -1,4 +1,4 @@
-@use "../../styles/vars.scss" as vars;
+@use "../../../styles/vars.scss" as vars;
 
 .cash-table-actions {
   border-top: 1px solid vars.$border-form;
