--- a/src/pages/caixa/Movement/style.scss
+++ b/src/pages/caixa/Movement/style.scss
@@ -10,10 +10,17 @@
   justify-content: space-between;
 
   .cash-table-actions-info {
-    display: inline;
-    justify-content: flex-end;
+    display: flex;
+    align-items: center;
     gap: 0.5rem;
+  }
+
+  .cash-table-summary {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
     color: vars.$text;
     font-size: 1rem;
   }
 }
+
