feat(movimentacao-caixa): adiciona caixa de diálogo para inserir valores extras ao caixa

--- a/src/pages/caixa/Movement/style.scss
+++ b/src/pages/caixa/Movement/style.scss
@@ -24,3 +24,50 @@
   }
 }
 
+.modal-overlay {
+  position: absolute;
+  left: 0;
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  z-index: 10;
+  background: transparent;
+}
+
+.modal {
+  bottom: 250px;
+  position: relative;
+  background: #fff;
+  border: 1px solid vars.$icon-color;
+  padding: 1rem;
+  border-radius: 10px;
+  width: 280px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    transform: translateX(50%);
+    border-width: 20px;
+    border-style: solid;
+    border-color: vars.$icon-color transparent transparent transparent;
+  }
+}
+
+
+.modal input {
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 100%;
+}
+
+
+.modal-actions {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+
