--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -30,6 +30,7 @@
     text-align: left;
     font-size: 1rem;
     border: none; // Remove qualquer borda interna
+    vertical-align: middle;
   }
 
   td {
@@ -58,6 +59,7 @@
   td:last-child,
   th:last-child {
     text-align: center;
-    width: 60px;
   }
+
+
 }
