style(modal do contrato): ajustando padding e gap

--- a/src/pages/contract/components/styles.scss
+++ b/src/pages/contract/components/styles.scss
@@ -77,7 +77,7 @@
 
 .modal-content {
   background: vars.$bg-secondary;
-  padding: 0px 10px 10px 10px;
+  padding: 1.6rem;
   min-width: 60vw;
   max-width: 60vw;
   min-height: 85vh;
