--- a/src/pages/contract/Info/styles.scss
+++ b/src/pages/contract/Info/styles.scss
@@ -3,7 +3,7 @@
 .container-contract-info {
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 0.7rem;
   font-size: 20px;
   height: 100%;
 
