feature(register Contract): style padrão de justificação das células da tabela como centralizado, com exceção do nome que é justificado

--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -27,7 +27,7 @@
   th,
   td {
     padding: 1rem 0.6rem;
-    text-align: left;
+    text-align: center;
     font-size: 1rem;
     border: none; // Remove qualquer borda interna
     vertical-align: middle;
