--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -71,3 +71,42 @@
     background-color: vars.$btn-hoover;
   }
 }
+
+.modal-overlay {
+  position: flex;
+  background: transparent;
+}
+
+.modal {
+  bottom: 250px;
+  position: relative;
+  background: #fff;
+  border: 1px solid vars.$icon-color;
+  padding: 1rem;
+  border-radius: 10px;
+  width: 280px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    transform: translateX(50%);
+    border-width: 20px;
+    border-style: solid;
+    border-color: vars.$icon-color transparent transparent transparent;
+  }
+}
+
+
+.modal input {
+  margin-top: 15px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 100%;
+}
+
+
+.modal-actions {
+  display: flex;
+  justify-content: space-between;
+}
