--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -43,6 +43,7 @@
     width: 100%;
 
     .input {
+      font-size: 16px;
       width: 100%;
       padding: 10px;
       margin-bottom: 1rem;
@@ -53,6 +54,7 @@
     }
 
     .button {
+      font-size: 16px;
       width: 100%;
       padding: 10px;
       background-color: #0011cc;
@@ -63,6 +65,15 @@
 
       &:hover {
         background-color: #000099;
+      }
+    }
+
+    .div-caps {
+      height: 2.2rem;
+      font-size: 14px;
+
+      .msg-caps{
+        color: rgb(209, 160, 0);
       }
     }
   }
