--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -42,11 +42,14 @@
   .form {
     width: 100%;
 
+    .form-group {
+      height: 4.4rem;
+    }
+
     .input {
       font-size: 16px;
       width: 100%;
       padding: 10px;
-      margin-bottom: 1rem;
       border: none;
       background-color: #ccc;
       color: #333;
