--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -44,6 +44,16 @@
 
     .form-group {
       height: 4.4rem;
+      margin-bottom: 0.4rem;
+
+      label {
+        margin-bottom: 0;
+        //height: ;
+
+        span {
+          margin-left: 0;
+        }
+      }
     }
 
     .input {
@@ -72,10 +82,10 @@
     }
 
     .div-caps {
-      height: 2.2rem;
-      font-size: 14px;
+      height: 1.5rem;
+      margin-bottom: 0.2rem;
 
-      .msg-caps{
+      .msg-caps {
         color: rgb(209, 160, 0);
       }
     }
