--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -37,7 +37,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 4rem;
+  gap: 3rem;
+
+  .logo{
+    min-width: 9rem;
+  }
 
   .form {
     width: 100%;
@@ -86,7 +90,7 @@
       margin-bottom: 0.2rem;
 
       .msg-caps {
-        color: rgb(209, 160, 0);
+        color: #E9B71A;
       }
     }
   }
