--- a/src/pages/turma/ListarTurma/index.scss
+++ b/src/pages/turma/ListarTurma/index.scss
@@ -1,4 +1,4 @@
-@use "../../styles/vars.scss" as vars;
+@use "../../../styles/vars.scss" as vars;
 // body{
 //     background-color: rgba(128, 128, 128, 0.541);
 // }
