--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -30,34 +30,39 @@
 .menu-list {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   margin: 0;
   padding: 0;
   height: 100%;
   list-style: none;
   flex: 1;
   justify-content: center;
+  gap: 1rem;
 }
 
 .menu-item {
   position: relative;
-  margin-right: 2.5rem;
-  height: 100%;
+  //margin-right: 2.5rem;
+  //height: 50px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  min-width: 180px; // 150px
+  //justify-content: center;
+  cursor: pointer;
+  border-radius: 4px 4px 0 0;
 }
 
 .menu-label {
   color: #fff;
   font-size: 1.15rem;
   font-weight: 500;
-  cursor: pointer;
   padding: 0.5rem 0.8rem;
   transition: background 0.2s;
   border-radius: 6px 6px 0 0;
 }
 
-.menu-label:hover {
+.menu-item:hover {
+  // menu-label:hover
   background: #26328c;
 }
 
@@ -65,11 +70,11 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background: #1a237e;
+  background: #f9f9f9;
   min-width: 180px;
   box-shadow: 0 4px 12px #0002;
   border-radius: 0 0 10px 10px;
-  padding: 0.5rem 0;
+  padding: 0; // 0.5rem 0
   list-style: none;
   margin: 0;
 }
@@ -80,18 +85,25 @@
 
 .submenu-item a {
   display: block;
-  color: #fff;
+  color: #1a237e;
   padding: 0.7rem 1.2rem;
   text-decoration: none;
   font-size: 1rem;
   transition: background 0.2s, color 0.2s;
-  border-radius: 0 0 10px 10px;
+  //border-radius: 0 0 10px 10px;
 }
 
 .submenu-item a:hover {
   background: #ffeb3b;
   color: #1a237e;
   font-weight: 600;
+}
+
+.submenu:last-child a {
+  border-radius: 0 0 10px 10px;
+  :hover {
+    border-radius: 0 0 10px 10px;
+  }
 }
 
 .menu-right {
