style(menu): melhorando caixa de diálogo

--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -109,7 +109,7 @@
   align-items: center;
   height: 100%;
   padding: 0 1rem;
-  position: "relative";
+  position: relative;
 }
 
 .photo-user {
@@ -144,12 +144,14 @@ i.bi-person-fill {
 .menu-modal-overlay {
   position: absolute;
   top: 72px; // ajuste para ficar logo abaixo do ícone (44px ícone + 12px margem)
-  right: 1rem;
-  width: 180px;
+  right: -1rem;
+  min-width: 182px;
+  height: 100px;
   background: none;
   z-index: 9999;
   display: flex;
   justify-content: flex-end;
+  box-shadow: 0 4px 12px #0002;
 }
 
 .menu-modal {
@@ -173,5 +175,15 @@ i.bi-person-fill {
     width: 0;
     height: 0;
     z-index: 1;
+  }
+}
+
+.user-submenu {
+  top: 0 !important;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: none !important;
+  
+  .submenu-item:first-child a {
+    border-radius: 10px 10px 0 0;
   }
 }
