--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -144,23 +144,29 @@ i.bi-person-fill {
 .menu-modal-overlay {
   position: absolute;
   top: 72px;
-  right: -1rem;
-  min-width: 182px;
-  height: 100px;
+  right: -16px;
+  min-width: auto;
+  height: auto;
   background: none;
   z-index: 9999;
   display: flex;
   justify-content: flex-end;
-  box-shadow: 0 4px 12px #0002;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.557);
+  border-radius: 10px;
 }
 
 .menu-modal {
   position: relative;
   background: #fff;
-  border: 1px solid vars.$icon-color;
+  border: 1px solid #323fa6;
   border-radius: 10px;
-  box-shadow: 0 4px 12px #0002;
-  width: 100%;
+  width: auto;
+  height: auto;
+
+  div {
+    width: auto;
+    height: auto;
+  }
 
   &::after {
     content: "";
@@ -170,14 +176,15 @@ i.bi-person-fill {
     transform: translateX(50%);
     border-width: 20px;
     border-style: solid;
-    border-color: transparent transparent vars.$icon-color transparent;
+    border-color: transparent transparent #323fa6 transparent;
   }
 }
 
 .user-submenu {
-  top: 0 !important;
-  border-radius: 10px 10px 10px 10px;
-  box-shadow: none !important;
+  position: relative;
+  top: 0;
+  border-radius: 10px;
+  box-shadow: none;
   
   .submenu-item:first-child a {
     border-radius: 10px 10px 0 0;
