style(menu): salvando as cores em variáveis gllobais

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -15,3 +15,10 @@ $text-header: #ffffff;
 $text: #000000;
 $user-color:#f1f1f1;
 $icon-color: #000080;
+$menu: #1a237e;
+$menu-hover: #26328c;
+$menu-active: #323fa6;
+$submenu-hover:  #ffeb3b;
+$menu-label: #fff;
+$submenu-background: #f9f9f9;
+$user-fill-color: #757575;
