--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -2,7 +2,7 @@
 
 .menu {
   width: 100vw;
-  background: #1a237e;
+  background: vars.$menu;
   position: fixed;
   top: 0;
   left: 0;
@@ -55,7 +55,7 @@
 }
 
 .menu-label {
-  color: #fff;
+  color: vars.$menu-label;
   font-size: 1.15rem;
   font-weight: 500;
   padding: 0.5rem 0.8rem;
@@ -64,14 +64,14 @@
 }
 
 .menu-item:hover {
-  background: #26328c;
+  background-color: vars.$menu-hover;
 }
 
 .submenu {
   position: absolute;
   top: 100%;
   left: 0;
-  background: #f9f9f9;
+  background: vars.$submenu-background;
   min-width: 180px;
   box-shadow: 0 4px 12px #0002;
   border-radius: 0 0 10px 10px;
@@ -86,7 +86,7 @@
 
 .submenu-item a {
   display: block;
-  color: #1a237e;
+  color: vars.$menu;
   padding: 0.7rem 1.2rem;
   text-decoration: none;
   font-size: 1rem;
@@ -95,8 +95,8 @@
 }
 
 .submenu-item a:hover {
-  background: #ffeb3b;
-  color: #1a237e;
+  background: vars.$submenu-hover;
+  color: vars.$menu;
   font-weight: 600;
 }
 
@@ -127,7 +127,7 @@
 
 i.bi-person-fill {
   font-size: 32px;
-  color: #757575;
+  color: vars.$user-fill-color;
 }
 
 .with-menu {
@@ -135,7 +135,7 @@ i.bi-person-fill {
 }
 
 .menu-item.active {
-  background: #323fa6;
+  background: vars.$menu-active;
   border-radius: 10px 10px 0 0;
   box-shadow: 0 2px 8px #0001;
   transition: background 0.2s, color 0.2s;
@@ -158,7 +158,7 @@ i.bi-person-fill {
 .menu-modal {
   position: relative;
   background: #fff;
-  border: 1px solid #323fa6;
+  border: 1px solid vars.$menu-active;
   border-radius: 10px;
   width: auto;
   height: auto;
@@ -176,7 +176,7 @@ i.bi-person-fill {
     transform: translateX(50%);
     border-width: 20px;
     border-style: solid;
-    border-color: transparent transparent #323fa6 transparent;
+    border-color: transparent transparent vars.$menu-active transparent;
     pointer-events: none;
   }
 }
