fix: corrige alinhamento de selects no histórico de caixa e insere a rota correta no roteamento

--- a/src/pages/checkout/History/style.scss
+++ b/src/pages/checkout/History/style.scss
@@ -10,7 +10,7 @@
   align-items: center;
   gap: 1rem;
 
-  #select {
+  .select {
     margin-top: 15px;
     border: 1px solid vars.$table-border;
   }
