--- a/src/pages/checkout/Movement/style.scss
+++ b/src/pages/checkout/Movement/style.scss
@@ -1,10 +1,14 @@
 @use "../../../styles/vars.scss" as vars;
 
-.table-container{
-  width: 100%;
-  min-height: 87vh;
-  padding: 2rem 1rem;
+.checkout-table-page {
+  min-height: 100vh; 
+  .table-container {
+    width: 100%;
+    min-height: 87vh !important;
+    padding: 2rem 1rem;
+  }
 }
+
 .cash-table-actions {
   border-top: 1px solid vars.$border-form;
   background-color: vars.$bg-primary;
