--- a/src/pages/class/components/styles.scss
+++ b/src/pages/class/components/styles.scss
@@ -91,11 +91,46 @@
   .center-modal-content {
     background: vars.$bg-secondary;
     padding: 1.6rem;
-    min-width: 60vw;
+    min-width: 30vw;
     max-width: 60vw;
-    min-height: 85vh;
-    max-height: 85vh;
+    min-height: 60vh;
+    max-height: 60vh;
     border-radius: 16px;
     box-shadow: -4px 4px 12px 2px rgba(0, 0, 0, 0.25);
+
+    
+  .info-turma {
+    h2 {
+      margin-bottom: 3rem;
+    }
+
+    p {
+      margin: 0.5rem 0.5rem;
+      font-size: 1.1rem;
+    }
+
+    .color-info{
+      display: flex;
+      align-items: center;
+
+      p{
+        margin: 0 0.5rem;
+      }
+    }
+
+    .color-box {
+      width: 20px;
+      height: 20px;
+      border: 1px solid #ccc;
+      margin: 0.5rem 0;
+    }
+
+    Button{
+      margin-top: 30px;
+    }
+  } 
+
   }
+
+
 }
