--- a/src/pages/class/Register/styles.scss
+++ b/src/pages/class/Register/styles.scss
@@ -1,62 +1,41 @@
 @use "../../../styles/vars.scss" as vars;
 
-.form-class {
-  max-width: 700px;
-  margin: 0 auto;
-  padding: 2rem;
-  background-color: vars.$bg-form;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px vars.$text;
+
+.colorpicker-popup {
+  position: absolute;
+  top: 0;
+  left: 100%; /* faz abrir ao lado direito do input */
+  margin-left: 8px; /* espaçamento */
+  z-index: 999;
 }
 
-h1 {
-  text-align: center;
-  margin-bottom: 2rem;
-  font-size: 1.8rem;
-  color: vars.$text;
-}
-
-.container-class {
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding-top: 2rem;
+  z-index: 999;
+}
 
-  .row {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-  
-    > * {
-      flex: 1;
-      min-width: 180px;
-    }
-  }
-  
-  input,
-  select,
-  textarea {
-    width: 100%;
-    padding: 0.75rem;
-    font-size: 1rem;
-    border: 1px solid vars.$border-form;
-    border-radius: 6px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: 600;
-    color: vars.$text;
-  }
-  
-  button {
-    align-self: flex-start;
-    padding: 0.75rem 1.5rem;
-    font-size: 1rem;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
+.modal-content {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 10px;
+  max-width: 600px;
+  width: 100%;
+  height: 700px;
+
+
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+  margin-top: 1rem;
 }
