refact(class): substituindo variáveis e métodos em português para o inglês

--- a/src/pages/class/Info/styles.scss
+++ b/src/pages/class/Info/styles.scss
@@ -1,6 +1,6 @@
 @use "../../../styles/vars.scss" as vars;
 
-.container-contract-info {
+.container-class-info {
   display: flex;
   flex-direction: column;
   gap: 0.7rem;
