--- a/src/pages/class/Register/styles.scss
+++ b/src/pages/class/Register/styles.scss
@@ -1,11 +1,10 @@
 @use "../../../styles/vars.scss" as vars;
 
-
 .colorpicker-popup {
   position: absolute;
   top: 0;
-  left: 100%; /* faz abrir ao lado direito do input */
-  margin-left: 8px; /* espaçamento */
+  left: 100%;
+  margin-left: 8px;
   z-index: 999;
 }
 
@@ -29,8 +28,6 @@
   max-width: 600px;
   width: 100%;
   height: 700px;
-
-
 }
 
 .modal-actions {
